# DMKollok

./: .gitignore  README.md
DMKollok/LongNumbWorker/LongNumbWorker/: CMakeLists.txt  main.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/ADD_NN_N/: ADD_NN_N.c  ADD_NN_N.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/COM_NN_D/: COM_NN_D.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/DIV_NN_N/: DIV_NN_N.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/GCF_NN_N/: GCF_NN_N.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/LCM_NN_N/: LCM_NN_N.h  main.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/MOD_NN_N/: MOD_NN_N.c  MOD_NN_N.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/MUL_ND_N/: MUL_ND_N.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/MUL_NN_N/: MULL_N_N.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/NZER_N_B/: NZER_N_B.c  NZER_N_B.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/SUB_NDN_N/: SUB_NDN_N.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/N/SUB_NN_N/: SUB_NN_N.c  SUB_NN_N.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/P/ADD_PP_P/: ADD_PP_P.c  numbP.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/P/DEG_P_N/: DEG_P_N.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/P/LED_P_Q/: LED_P_Q.c  LED_P_Q.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/P/MUL_PQ_P/: MUL_PQ_P.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/P/SUB_PP_P/: SUB_PP_P.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/Q/ADD_QQ_Q/: ADD_QQ_Q.c  ADD_QQ_Q.h
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/Q/DIV_QQ_Q/: DIV_QQ_Q.c
DMKollok/LongNumbWorker/LongNumbWorker/DMKollok/Q/INT_Q_B/: INT_Q_B.c  (+1 more)
(+148 files in other folders)
